# fastapi-supabase

./: pyproject.toml
fastapi_supabase/: app.py  runner.py  settings.py
